--- a/index.html
+++ b/index.html
@@ -1,76 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Portfolio</title>
-</head>
-<div class="header">
+  </head>
+  <div class="header">
     <h1>Web Developer in Training</h1>
-</div>
-<h2 class="header">Patrick Lyles</h2>
-<body>
+  </div>
+  <h2 class="header">Patrick Lyles</h2>
+  <body>
     <nav>
-       
-        <ul class="nav">
-            <li class="hover-over"><a href="#Bio">Bio</a></li>
-            <li class="hover-over"><a href="#"></a>Photo</li>
-            <li class="hover-over"><a href="#"></a>Contact</li>
-            <li class="hover-over"><a href="#"></a>Networking</li>
-            <li class="hover-over"><a href="#"></a>Skills</li>
-        </ul>
+      <ul class="nav">
+        <li class="hover-over"><a href="#Bio">Bio</a></li>
+        <li class="hover-over"><a href="#Photo">Photo</a></li>
+        <li class="hover-over"><a href="#Network">Network</a></li>
+        <li class="hover-over"><a href="#Contact">Contact</a></li>
+        <li class="hover-over"><a href="#Skills">Skills</a></li>
+      </ul>
     </nav>
     <h1 id="about">About me</h1>
-    <!--<div id="selfie">
-        <img src="me.jpg" alt="selfie">
-    </div>-->
     <div>
-    <ul class="me">
+      <ul class="me">
         <li>Attention to detail oriented</li>
         <li>Dedicated worker</li>
         <li>10 years+ Quality Assurance</li>
         <li>Team effort player</li>
         <li>Faithful team player</li>
         <li>Embrace constructive criticism</li>
-    </ul>
-</div>
-    <h2 class="info" id="Bio">Biographical Information</h2>
+      </ul>
+    </div>
+    <h2 class="info" id="Bio" style="color: aliceblue">
+      Biographical Information
+    </h2>
     <section class="bio">
-        <img src="me.jpg" alt="selfie">
-        <ul class="stats">
-            <li>Name: Patrick Lyles</li>
-            <li>Nickname: Pat</li>
-            <li>D.O.B.: 05/20/1974</li>
-            <li>Gender: Male</li>
-        </ul>
+      <img id="Photo" src="me.jpg" alt="selfie" />
+      <ul class="stats">
+        <li>Name: Patrick Lyles</li>
+        <li>Nickname: Pat</li>
+        <li>D.O.B.: 05/20/1974</li>
+        <li>Gender: Male</li>
+      </ul>
     </section>
-    <h2 id="links">Links</h2>
+    <h2 id="links">Network</h2>
+    <div id="Network">
+      <div class="links">
+        <a
+          href="https://www.linkedin.com/in/patrick-lyles-b8900523a//"
+          style="color: aliceblue"
+          >Linkedin</a
+        >
+        <a href="https://github.com/pdub811" style="color: aliceblue">Github</a>
+      </div>
+    </div>
     <section>
-        <div class="links">
-            <a href="https://www.linkedin.com/in/patrick-lyles-b8900523a//" style="color: aliceblue;
-        ">Linkedin</a>
-            <a href="https://github.com/pdub811" style="color: aliceblue;">Github</a>
-        </div>
+      <h2 class="skills" id="Skills">Skills</h2>
+      <ul>
+        <li class="skills-1">HTML</li>
+        <li class="skills-1">CSS</li>
+        <li class="skills-1">Grid</li>
+      </ul>
     </section>
-    <section>
-        <h2 class="skills">Skills</h2>
-        <ul>
-            <li class="skills-1">HTML</li>
-            <li class="skills-1">CSS</li>
-        </ul>
-    </section>
-    <h2 class="contact-info">Contact Information</h2>
-    <div class="contact">
-        <ul>
-            <li class="contact">Email: pdub811@gmail.com</li>
-            <li class="contact">Address:811 Starkweather Ave, <br> Cleveland OH <br>44113</li>
-            <li class="contact">Phone: (216) 337-5630</li>
-        </ul>
-        <article class="created">Projects created <br>To be continued</article>
-</body>
-<footer class="footer">2023</footer>
-
+    <h2>Contact Information</h2>
+    <div class="contact" id="Contact"></div>
+    <ul>
+      <li class="contact">Email: pdub811@gmail.com</li>
+      <li class="contact">Address:811 Starkweather Ave,</li>
+        <li class="contact">Cleveland, OH</li>
+      <li class="contact">Phone: (216) 337-5630</li>
+    </ul>
+    <article>Projects created</article>
+    <article>To be continued.</article>
+  </body>
+  <footer>2023</footer>
 </html>
